exports[`test should accept an active prop to show the input 1`] = `
<Layout state={{...}} preFill={[Function]} accounts={{...}} active={true} inputVal="5.00">
  <div>
    <div className="display-inline-block push-half-bottom h3 push-half-right text-dark-tertiary">
      and give to
    </div>
    <Select classes={{...}} inputClasses="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" items={{...}} onChange={[undefined]} placeholder="select fund" selected={[undefined]} deselect={true} hideLabel={true} includeBlank={true}>
      <div className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select id={[undefined]} placeholder="select fund" name={[undefined]} className="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" disabled={[undefined]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} value={[undefined]}>
          <option style={{...}}>
            select fund
          </option>
          <option />
          <option className={[undefined]} value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
    <div className="display-block">
      <h3 className="text-dark-tertiary push-half-bottom push-half-right display-inline-block">
        with
      </h3>
      <Input classes={{...}} defaultValue={[undefined]} format={[undefined]} hideLabel={true} inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" style={{...}} type="tel" value="5.00">
        <div className="input input--active soft-bottom input--active display-inline-block" style={{...}} data-spec="input-wrapper">
          <RenderLabel hideLabel={true} id={[undefined]} name={[undefined]} label={[undefined]} disabled={[undefined]} />
          <input id={[undefined]} type="tel" placeholder="$0.00" name={[undefined]} className="outlined--dotted outlined--light h3 hard-top flush-bottom text-dark-primary show-placeholder_1bkmqm1" disabled={[undefined]} onBlur={[Function]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} style={{...}} maxLength="" data-spec="input" />
        </div>
      </Input>
    </div>
  </div>
</Layout>
`;

exports[`test should accept custom classes thru classes prop 1`] = `
<Layout state={{...}} preFill={[Function]} accounts={{...}} classes="test1 test2">
  <div>
    <div className="display-inline-block push-half-bottom h3 push-half-right text-light-tertiary">
      and give to
    </div>
    <Select classes={{...}} inputClasses="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" items={{...}} onChange={[undefined]} placeholder="select fund" selected={[undefined]} deselect={true} hideLabel={true} includeBlank={true}>
      <div className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select id={[undefined]} placeholder="select fund" name={[undefined]} className="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" disabled={[undefined]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} value={[undefined]}>
          <option style={{...}}>
            select fund
          </option>
          <option />
          <option className={[undefined]} value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
  </div>
</Layout>
`;

exports[`test should accept multiple accounts through accounts prop 1`] = `
<Layout state={{...}} preFill={[Function]} accounts={{...}}>
  <div>
    <div className="display-inline-block push-half-bottom h3 push-half-right text-light-tertiary">
      and give to
    </div>
    <Select classes={{...}} inputClasses="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" items={{...}} onChange={[undefined]} placeholder="select fund" selected={[undefined]} deselect={true} hideLabel={true} includeBlank={true}>
      <div className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select id={[undefined]} placeholder="select fund" name={[undefined]} className="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" disabled={[undefined]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} value={[undefined]}>
          <option style={{...}}>
            select fund
          </option>
          <option />
          <option className={[undefined]} value="hello">
            hello
          </option>
          <option className={[undefined]} value="world">
            world
          </option>
        </select>
      </div>
    </Select>
  </div>
</Layout>
`;

exports[`test should render with minimal props 1`] = `
<Layout state={{...}} preFill={[Function]} accounts={{...}}>
  <div>
    <div className="display-inline-block push-half-bottom h3 push-half-right text-light-tertiary">
      and give to
    </div>
    <Select classes={{...}} inputClasses="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" items={{...}} onChange={[undefined]} placeholder="select fund" selected={[undefined]} deselect={true} hideLabel={true} includeBlank={true}>
      <div className="input soft-bottom display-inline-block select_1rryh47 select_15p0e27">
        <select id={[undefined]} placeholder="select fund" name={[undefined]} className="text-light-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom" disabled={[undefined]} onFocus={[Function]} onChange={[Function]} defaultValue={[undefined]} value={[undefined]}>
          <option style={{...}}>
            select fund
          </option>
          <option />
          <option className={[undefined]} value="main fund">
            main fund
          </option>
        </select>
      </div>
    </Select>
  </div>
</Layout>
`;
